--- a/event.html
+++ b/event.html
@@ -236,7 +236,7 @@
 				</div>
 			</div>
 			<div id="menuevents">
-				<div class="eventbutton" style="background-image:url(http://i.imgur.com/yl66bLe.png)"><img src="http://i.imgur.com/qEAfodg.png" alt="Spring 2013" title="Spring 2013" onclick="chMenuSelectedEvent(22)"/></div>
+				<!--div class="eventbutton" style="background-image:url(http://i.imgur.com/yl66bLe.png)"><img src="http://i.imgur.com/qEAfodg.png" alt="Spring 2013" title="Spring 2013" onclick="chMenuSelectedEvent(22)"/></div>
 				<div class="eventbutton" style="background-image:url(http://i.imgur.com/N0VJyTd.png)"><img src="http://i.imgur.com/L3be5aR.png" alt="Summer 2013" title="Summer 2013" onclick="chMenuSelectedEvent(23)"/></div>
 				<div class="eventbutton" style="background-image:url(http://i.imgur.com/aPx281n.png)"><img src="http://i.imgur.com/6WjZOpE.png" alt="Fall 2013" title="Fall 2013" onclick="chMenuSelectedEvent(24)"/></div>
 				<div class="eventbutton" style="background-image:url(http://i.imgur.com/WGhBfSf.jpg)"><img src="http://i.imgur.com/HGuOC0q.jpg" alt="Winter 2013" title="Winter 2013" onclick="chMenuSelectedEvent(25)"/></div>
@@ -256,8 +256,8 @@
 				<div class="eventbutton" style="background-image:url(http://i.imgur.com/DVZX6RR.png)"><img src="http://i.imgur.com/nOkdjn2.png" alt="Summer 2017" title="Summer 2017" onclick="chMenuSelectedEvent(39)"/></div>
 				<div class="eventbutton" style="background-image:url(http://i.imgur.com/Kvt6ikS.png)"><img src="http://i.imgur.com/xWMGYCa.png" alt="Fall 2017" title="Fall 2017" onclick="chMenuSelectedEvent(40)"/></div>
 				<div class="eventbutton" style="background-image:url(http://i.imgur.com/Oj9Svb7.png)"><img src="http://i.imgur.com/fRKQ4tM.png" alt="Winter 2018" title="Winter 2018" onclick="chMenuSelectedEvent(41)"/></div>
+				<div class="eventbutton" style="background-image:url(assets/maps/20/banner1.png)"><img src="assets/maps/20/banner2.png" alt="Phase 1 Classic" title="Phase 1 Classic" onclick="chMenuSelectedEvent(20)"/></div-->
 				<div class="eventbutton" style="background-image:url(assets/maps/42/banner1.png)"><img src="assets/maps/42/banner2.png" alt="Early Fall 2018" title="Early Fall 2018" onclick="chMenuSelectedEvent(42)"/></div>
-				<div class="eventbutton" style="background-image:url(assets/maps/20/banner1.png)"><img src="assets/maps/20/banner2.png" alt="Phase 1 Classic" title="Phase 1 Classic" onclick="chMenuSelectedEvent(20)"/></div>
 			</div>
 			<div id="menuloadfile">
 				<img src="" id="menucurbanner" /><br>
